# indexforge

./: .gitignore  API_DESIGN_PROPOSAL.md  API_QUICK_REFERENCE.md  DESIGN_RATIONALE.md  FREE_DATA_SOURCES.md  GETTING_STARTED.md  MODULE_STRUCTURE.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
examples/: __init__.py  acme_faang_index.py  acme_gbs_common.py  acme_gbs_developed_europe.py  acme_gbs_developed_pacific.py  acme_gbs_emerging_markets.py  acme_gbs_global_large_mid.py  acme_gbs_north_america.py  acme_subscription_economy.py  custom_data_source.py  data_source_configuration.py  market_cap_index.py  simple_index.py
src/index_maker/: __init__.py
src/index_maker/core/: __init__.py  constituent.py  index.py  types.py  universe.py
src/index_maker/data/: __init__.py  provider.py
src/index_maker/data/connectors/: __init__.py  base.py  yahoo.py
src/index_maker/rebalancing/: __init__.py  schedule.py
src/index_maker/selection/: __init__.py  composite.py  criteria.py
src/index_maker/validation/: __init__.py  report.py  rules.py
src/index_maker/weighting/: __init__.py  methods.py
src/indexforge/: __init__.py
src/indexforge/core/: __init__.py  constituent.py  index.py  types.py  universe.py
src/indexforge/data/: __init__.py  provider.py
src/indexforge/data/connectors/: __init__.py  base.py  yahoo.py
src/indexforge/rebalancing/: __init__.py  schedule.py
src/indexforge/selection/: __init__.py  composite.py  criteria.py
src/indexforge/validation/: __init__.py  rules.py
src/indexforge/weighting/: __init__.py  methods.py
tests/: __init__.py  conftest.py  test_core.py  test_rebalancing.py  test_selection.py  test_validation.py  test_weighting.py
